--- a/app/assets/stylesheets/service_requests.scss
+++ b/app/assets/stylesheets/service_requests.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the serviceRequests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 60%;
+  width: 60%;
+}
