--- a/app/views/service_requests/_map.js.erb
+++ b/app/views/service_requests/_map.js.erb
@@ -13,7 +13,7 @@ function initMap() {
   // Set the marker for the provider with attributes
   var providerLocation = new google.maps.Marker({
     position: focus,
-    title: '<%= @person.name %>',
+    title: '<%= @current_user.company_name %>',
     animation: google.maps.Animation.DROP,
   });
 
