--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,7 +4,9 @@ a#logo {
   font-family: 'Signika', sans-serif;
   font-size: 50px;
   margin-left: 2%;
+
 }
+
 
 /***** HomePage *****/
 /* Section 1 */
@@ -13,18 +15,23 @@ a#logo {
   position: relative;
  }
 
-/*STYLE FOR MAIN PARAGRAPH ON HOME PAGE*/
-#main-paragraph {
-    background-color: #8bc34a;
+body {
+    /*background-color: #F1F3F3 !important;*/
 }
 
 #main-paragraph p {
-    font-size: 1.6em;
-    color: white;
+    font-size: 18px;
+    color: grey;
+    line-height: 2rem;
+    font-family: 'Signika', sans-serif;
+
+}
+#about{
+  padding:5% 0 5% 0;
 }
 
 nav{
-  background-color: transparent !important;
+  /*background-color: transparent !important;*/
   box-shadow: none !important;
 }
 
@@ -51,17 +58,65 @@ nav{
    background-color: rgba(150,150,150,0.3);
  }
 
+.white-color{
+   /*background-color: rgba(255, 255, 255, 0.35);*/
+   color: black;
+ }
+
  .tab-content{
    margin-top:3%;
  }
 
- .tabs .tab a{
-   /*color:black !important;*/
- }
+/*.card-content{
+  background-color:rgba(255,255,255,0.5);
+  padding:2% 0 0 0 !important;
+}*/
+/*.card .card-action{
+  padding: 0 !important;
+}*/
+
+.icon-wrapper{
+  background-color: rgba(0,0,0,0.5);
+  position: absolute;
+  z-index: 100;
+  height: 100%;
+  text-align: center;
+  width: 100%;
+}
+
+.icon-wrapper i{
+  margin-top:20%;
+  color:white;
+  cursor: pointer;
+}
 
 
-#wash{
-  height: 200px !important;
+.card-content p{
+  display: none;
+
+  /*opacity: 0;*/
+}
+.card-content:hover p{
+  display:block;
+}
+
+#section-two{
+  height: 100vh !important;
+}
+#section-two h3{
+  font-size: 1.5rem;
+  color: grey;
+}
+/*#section-two i{
+  color: black;
+  padding: 5% 0 5% 0;
+}*/
+
+#section-two {
+  /*background-color: rgb(230,146,75);*/
+}
+.content{
+  padding-top:10%;
 }
 
 #homedoor {
@@ -96,9 +151,9 @@ h5 {
 
 /* Geo Map -*/
 #map {
-  margin-top: 3%;
-  height: 400px;
-  width: 800px;
+  margin-top: 2%;
+  height: 200px;
+  width: 100%;
 
 }
 
