--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <header>
   <div class="navbar-fixed">
 
-    <nav class="">
+    <nav class="light green">
      <div class="nav-wrapper">
        <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
 
