--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -64,6 +64,11 @@
     </div>
 
     <div class="input-field col s6">
+      <%= f.label "City" %>
+      <%= f.text_field :city %>
+    </div>
+
+    <div class="input-field col s6">
       <%= f.label "State" %>
       <%= f.text_field :state %>
     </div>
