--- a/app/views/service_requests/_map.js.erb
+++ b/app/views/service_requests/_map.js.erb
@@ -23,7 +23,9 @@ function initMap() {
   // Interate to produce multiple markers array
   <% if @service_requests.count > 0 %>
     var markerArray = [<% ServiceRequest.map_markers.each do |sr| %>
-      ["Customer: <%= sr.user.first_name %> <%= sr.user.last_name %><br>",
+      ["Customer: " + "<%= sr.user.first_name %>" + " " + "<%= sr.user.last_name %>" + "<br>\
+      Service Needed: " + "<a href=" + "/users/" + "<%= sr.user_id %>" + "/service_requests/" + "<%= sr.id %>" +
+      ">" + "<%= sr.services.first.name %>" + "</a>",
       <%= sr.user.latitude %>, <%= sr.user.longitude %>],<% end %>];
   <% end %>
 
