--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,147 +1,103 @@
 
 <div class="parallax-container" id="homedoor">
-  <div class="row">
-    <div class="">
-        <!-- <h1>Join us today!</h1> -->
-    </div>
-   </div>
-
    <!-- Section 1 - Parrallax Home -->
    <div class="parallax "><%= image_tag "teardown.jpg" %>  </div>
 
    <!-- overlay  -->
     <div class="overlay">
-      <% %>
       <h1 class="home-title">Need home repairs?</h1>
-      <!-- <form class="home-form row " action="index.html" method="post">
+      <form class="home-form row " action="index.html" method="post">
        <div class="input-field col s10 m4 offset-m4 offset-s1 white z-depth-2">
          <input id="zipcode" type="text" name="zipcode">
          <label for="zipcode">Zipcode</label>
        </div>
-      </form> -->
-      <% %>
-
-
+      </form>
     </div>
 </div>
-    <!-- Section 2 - About -->
+
+    <!-- Section 2 - Getting Started Section -->
     <div class="container center-align" id="about">
-        <i class="material-icons medium center-align">build</i>
-        <h2>Getting Started</h2>
-        <hr>
-        <!-- Main Paragraph -->
-        <div class="row" id="main-paragraph">
-            <p>Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
-            <p>Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p>
-        </div>
-    </div>
+      <i class="material-icons medium center-align">build</i>
+      <h2>Getting Started</h2>
+      <hr>
+
+        <div class="row">   <!-- 1-2-3 Cards starts here  -->
+          <div class="col s12">
+            <div class="col s12 m4 ">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-image">
+                    <div class="icon-wrapper">
+                     <i class="material-icons large center-align">filter_1</i>
+                    </div>
+                    <%= image_tag("plumbing.jpg")%>
+                  </div>
+                  <div class="card-action white black-text">
+                    <h3>Request a Quote</h3>
+                    <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
+                    <a href="#">Request a Quote</a>
+                  </div>
+                </div>
+              </div>
+           </div>   <!-- End of First Card -->
+
+          <div class="col s12 m4">
+            <div class="icon block">
+              <div class="card">
+                <div class="card-content ">
+                  <!-- <h3 class="center">1</h3> -->
+                  <div class="card-image">
+                   <div class="icon-wrapper">
+                     <i class="material-icons large center-align">filter_2</i>
+                   </div>
+                    <%= image_tag("flooring.jpg")%>
+                  </div>
+                  <div class="card-action white black-text">
+                    <h3 class="center ">Receive Estimates</h3>
+                    <p>Local companies will send you estimates based on your request. </p>
+                    <a href="#">Receive Estimates</a>
+                  </div>
+                 </div>
+              </div>
+            </div>
+          </div> <!-- End of Second Card -->
+
+          <div class="col s12 m4">
+             <div class="icon block">
+               <div class="card">
+                 <div class="card-content ">
+                   <!-- <h3 class="center">1</h3> -->
+                   <div class="card-image">
+                     <div class="icon-wrapper">
+                       <i class="material-icons large center-align">filter_3</i>
+                     </div>
+                     <%= image_tag("electrician.jpg")%>
+                   </div>
+                   <div class="card-action white black-text">
+                     <h3 class="center ">Choose an Expert</h3>
+                     <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
+                     <a href="#">Get started!</a>
+                   </div>
+                  </div>
+               </div>
+             </div>
+           </div> <!-- End of Third Card -->
+          </div>
+        </div> <!-- 1-2-3 Cards ends here  -->
+    </div> <!-- Section 2 - Getting Started Section ends -->
 
 
   <!-- Section 3 - Parallax Home  -->
    <div class="parallax-container" id="section-two">
      <div class="parallax "><%= image_tag "grass.jpg" %></div>
-     <div class="row content overlay white-color">
-       <div class="col s10 offset-s1">
-         <div class="col s12 m4 ">
-           <div class="card">
-             <div class="card-content">
-               <!-- <h3 class="center">1</h3> -->
-             <div class="card-image">
-               <div class="icon-wrapper">
-                <i class="material-icons large center-align">filter_1</i>
-               </div>
-               <%= image_tag("plumbing.jpg")%>
-             </div>
-             <div class="card-action white black-text">
-               <h3>Request a Quote</h3>
-               <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
-               <a href="#">Request a Quote</a>
-             </div>
-           </div>
-          </div>
-        </div>   <!-- End of First Card -->
 
-           <!-- <div class="icon block">
-               <h3 class="center">1</h3>
-               <h3 class="center ">Request a Quote</h3>
-               <div class="card 300px">
-                 <div class="card-image">
-                   <%= image_tag("plumbing.jpg")%>
-                   <span class="card-title">  </span>
-                 </div>
-                 <div class="card-content">
-                   <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
-                 </div>
-                 <div class="card-action">
-                 </div>
-               </div>
-           </div> -->
-
-         <div class="col s12 m4">
-         <div class="icon block">
-           <div class="card">
-             <div class="card-content ">
-               <!-- <h3 class="center">1</h3> -->
-
-
-               <div class="card-image">
-                <div class="icon-wrapper">
-                  <i class="material-icons large center-align">filter_2</i>
-                </div>
-                 <%= image_tag("flooring.jpg")%>
-               </div>
-               <div class="card-action white black-text">
-                 <h3 class="center ">Receive Estimates</h3>
-                 <p>Local companies will send you estimates based on your request. </p>
-                 <a href="#">Receive Estimates</a>
-               </div>
-              </div>
-           </div>
-         </div>
+     <!-- Main Paragraph -->
+     <div class="row content overlay white-color" id="main-paragraph">
+       <div class="col s8 offset-s2 z-depth-1 white">
+         <p class="center-align">Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
+         <!-- <p>Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p> -->
        </div>
-       <div class="col s12 m4">
-          <div class="icon block">
-            <div class="card">
-              <div class="card-content ">
-                <!-- <h3 class="center">1</h3> -->
-
-
-                <div class="card-image">
-                  <div class="icon-wrapper">
-                    <i class="material-icons large center-align">filter_3</i>
-                  </div>
-                  <%= image_tag("electrician.jpg")%>
-                </div>
-                <div class="card-action white black-text">
-                  <h3 class="center ">Choose an Expert</h3>
-                  <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
-                  <a href="#">Get started!</a>
-                </div>
-               </div>
-            </div>
-          </div>
-        </div>
-       <!-- <div class="col s12 m4">
-          <div class="icon block"> -->
-            <!-- <h3 class="center">3</h3> -->
-            <!-- <i class="material-icons medium center-align">filter_3</i>
-            <h3 class="center ">Choose an Expert</h3>
-             <div class="card 300px">
-               <div class="card-image">
-                   <%= image_tag("electrician.jpg")%>
-                 <span class="card-title"> <</span>
-               </div>
-               <div class="card-content">
-                 <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
-               </div>
-               <div class="card-action">
-               </div>
-             </div>
-           </div>
-         </div> -->
-       </div>
-    </div>
-   </div>
+     </div>
  </div>
 
 <!-- Section 4 - Information services section -->
@@ -187,13 +143,3 @@
   <div class="parallax"><%= image_tag "dining.jpg" %></div>
   <div class="overlay"></div>
 </div> -->
-
-<div class="container">
-  <div class="row">
-    <div class="col s8 offset-s1">
-      <div id="map">
-
-      </div>
-    </div>
-  </div>
-</div>
