--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,7 +4,6 @@ a#logo {
   font-family: 'Signika', sans-serif;
   font-size: 50px;
   margin-left: 2%;
-
 }
 
 
@@ -24,8 +23,8 @@ body {
     color: grey;
     line-height: 2rem;
     font-family: 'Signika', sans-serif;
-
 }
+
 #about{
   padding:5% 0 5% 0;
 }
@@ -34,7 +33,6 @@ nav{
   /*background-color: transparent !important;*/
   box-shadow: none !important;
 }
-
 
 .home-title {
   font-size: 4.8rem;
@@ -48,7 +46,8 @@ nav{
 .home-tag{
   text-align: center;
 }
- .overlay {
+
+.overlay {
    position: absolute;
    top: 0;
    left: 0;
@@ -66,14 +65,6 @@ nav{
  .tab-content{
    margin-top:3%;
  }
-
-/*.card-content{
-  background-color:rgba(255,255,255,0.5);
-  padding:2% 0 0 0 !important;
-}*/
-/*.card .card-action{
-  padding: 0 !important;
-}*/
 
 .icon-wrapper{
   background-color: rgba(0,0,0,0.5);
@@ -93,28 +84,26 @@ nav{
 
 .card-content p{
   display: none;
-
   /*opacity: 0;*/
 }
+
 .card-content:hover p{
   display:block;
 }
 
 #section-two{
-  height: 100vh !important;
+  /*height: vh !important;*/
 }
-#section-two h3{
+
+.card h3{
   font-size: 1.5rem;
   color: grey;
 }
-/*#section-two i{
-  color: black;
-  padding: 5% 0 5% 0;
-}*/
 
 #section-two {
   /*background-color: rgb(230,146,75);*/
 }
+
 .content{
   padding-top:10%;
 }
@@ -141,6 +130,9 @@ nav{
   text-align: center;
 }
 
+hr {
+  width: 35%;
+}
 
 /* Section 4  */
 /* Subtitle headers */
@@ -148,15 +140,36 @@ h5 {
   /*text-align: center;*/
 }
 
+span.badge{
+  position:relative !important;
+  margin-left: 3%;
+}
 
-/* Geo Map -*/
+#quote{
+  padding: 3% 1% 3% 1%;
+}
+
+.big-title{
+  padding: 1% 0 1% 0;
+}
+
+#new-quote {
+  margin: 10% 0 0 0;
+  padding: 3% 1% 3% 1%;
+}
+
+.table-title{
+  font-size:1.3rem;
+}
+
+
+/****** Geo Map ******/
 #map {
   margin-top: 2%;
   height: 200px;
   width: 100%;
-
+  padding: 0 10% 0 5%;
 }
-
 
 /****** Dashboard page ******/
 /* profile header */
@@ -179,10 +192,10 @@ h5 {
     padding: 3% 0 3% 0 !important;
 }
 
-#service-request{
-
-}
-
 #dashboard-left{
   margin-top: 3%;
+}
+
+.even {
+  background-color: #efefef;
 }
