--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
        <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
 
        <!-- for hamburger menu -->
-      <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
       <!-- links on desktop -->
          <ul id="nav-mobile" class="right hide-on-med-and-down">
