--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -2,13 +2,13 @@
 
   <div class="row">
     <!-- Dahboard Profile Bio -->
-      <div class="col m2 s12 offset-m1 center-align" id="dashboard-left">
+      <div class="col m2 s12 offset-m1 center-align z-depth-1" id="dashboard-left">
+        <h5 class="big-title center-align">Company Name</h5>
         <div class="col s12">
             <img src="http://placehold.it/200x200" />
         </div>
         <div class="col s12">
           <ul>
-            <li>Company Name</li>
             <li>Add Photos/Videos</li>
             <li>Edit/View Settings</li>
             <li>My Reviews</li>
@@ -19,9 +19,9 @@
       </div>
 
     <!-- Dashboard -->
-    <div class="col m8 s12">
+    <div class="col m8 s12 ">
 
-
+    <h5 class="big-title center-align cyan darken-4 white-text">Dashboard</h5>
     <ul class="collapsible" data-collapsible="accordion">
      <li>
        <!-- Section ONE - DASHBOARD-->
