--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,10 +4,10 @@
       <div class="col s8 offset-s2">
         <div class="col s6">
           <h5 class="white-text">Get Started Now!</h5>
-          <p class="grey-text text-lighten-4">1. Request a Quote</p>
-          <p class="grey-text text-lighten-4">2. Receive Estimates</p>
-          <p class="grey-text text-lighten-4">3. Choose an Expert</p>
-          <p class="grey-text text-lighten-4">Click here to begin!</p>
+            <ol class="grey-text text-lighten-4">1 - Request a Quote</ol>
+            <ol class="grey-text text-lighten-4">2 - Receive Estimates</ol>
+            <ol class="grey-text text-lighten-4">3 - Choose an Expert</ol>
+            <%= link_to 'Click here to begin!', services_path, class:"grey-text text-lighten-4" %>
 
         </div>
         <div class="col s6 ">
