--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -148,6 +148,9 @@
       <% end %>
 
       <br>
+      <% if @service_request.status == "Completed" %>
+      <%= render "charges/charge" %>     
+        <% end %>
       <%= link_to 'Back', user_service_requests_path(current_user) %>
     </div>
   </div>
