--- a/app/views/charges/_charge.html.erb
+++ b/app/views/charges/_charge.html.erb
@@ -14,7 +14,7 @@
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
+          data-description="Service Payment"
           data-amount="<%= @accepted_quote.amount %>"
           data-locale="auto"></script>
 <% end %>
