configure Twilio for Servicers

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -40,7 +40,7 @@
 
         <div class="input-field col m6 s12">
           <%= f.label "Phone" %>
-          <%= f.text_field :phone %>
+            <%= f.telephone_field :phone %>
         </div>
 
         <div class="input-field col m6 s12">
