update service section on homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,6 +21,16 @@
       <h2>Getting Started</h2>
       <hr>
 
+<div class="row">
+  <div class="col s12">
+    <span class="center-align">
+      Getting started on your home improvement or repair project is easy with Service Works.
+        Our mission is to connect local service companies with individuals looking to get started
+        on a home improvement or repair project.
+    </span>
+  </div>
+</div>
+
         <div class="row">   <!-- 1-2-3 Cards starts here  -->
           <div class="col s12">
             <div class="col s12 m4 ">
@@ -94,8 +104,7 @@
      <!-- Main Paragraph -->
      <div class="row content overlay white-color" id="main-paragraph">
        <div class="col s8 offset-s2 z-depth-1 white">
-         <p class="center-align">Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
-         <!-- <p>Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p> -->
+         <p class="center-align">Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p>
        </div>
      </div>
  </div>
