update first parallax with icons

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,30 +6,52 @@
    <!-- overlay  -->
     <div class="overlay">
       <h1 class="home-title">Need home repairs?</h1>
-      <form class="home-form row " action="index.html" method="post">
-       <div class="input-field col s10 m4 offset-m4 offset-s1 white z-depth-2">
-         <input id="zipcode" type="text" name="zipcode">
-         <label for="zipcode">Zipcode</label>
+      <div class="row plain-div">
+        <div class="col s6 offset-s3 ">
+          <div class="col s4 m4">
+            <div class="icon block">
+              <h2 class="center"><i class="material-icons medium">schedule</i></h2>
+              <h5 class="home-tag">24/7 Service</h5>
+            </div>
+          </div>
+
+          <div class="col s4 m4">
+            <div class="icon block">
+              <h2 class="center"><i class="material-icons medium">build</i></h2>
+              <h5 class="home-tag">Home Repairs</h5>
+            </div>
+          </div>
+
+          <div class="col s4 m4">
+            <div class="icon block">
+              <h2 class="center"><i class="material-icons medium">people</i></h2>
+              <h5 class="home-tag">All Services</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <form class="home-form row ">
+       <div class="input-field col s10 m4 offset-m4 offset-s1 center-align">
+         <a class="btn signup light-green" href="users/new">Sign me up!</a>
        </div>
       </form>
     </div>
 </div>
-
     <!-- Section 2 - Getting Started Section -->
     <div class="container center-align" id="about">
-      <i class="material-icons medium center-align">build</i>
+      <i class="material-icons medium center-align">settings</i>
       <h2>Getting Started</h2>
       <hr>
-
-<div class="row">
-  <div class="col s12">
-    <span class="center-align">
-      Getting started on your home improvement or repair project is easy with Service Works.
-        Our mission is to connect local service companies with individuals looking to get started
-        on a home improvement or repair project.
-    </span>
-  </div>
-</div>
+      <div class="row">
+        <div class="col s12">
+          <span class="center-align">
+            Getting started on your home improvement or repair project is easy with Service Works.
+              Our mission is to connect local service companies with individuals looking to get started
+              on a home improvement or repair project.
+          </span>
+        </div>
+      </div>
 
         <div class="row">   <!-- 1-2-3 Cards starts here  -->
           <div class="col s12">
@@ -111,32 +133,31 @@
 
 <!-- Section 4 - Information services section -->
 <div class="container">
-  <section>
+
 
     <div class="row ">
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
-          <h5 class="home-tag">24/7 Service</h5>
+          <!-- <h5 class="home-tag">24/7 Service</h5> -->
         </div>
       </div>
 
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5 class="home-tag">Home Repairs</h5>
+          <!-- <h5 class="home-tag">Home Repairs</h5> -->
         </div>
       </div>
 
       <div class="col s4 m4">
         <div class="icon block">
           <h2 class="center brown-text"><i class="material-icons">perm_identity</i></h2>
-          <h5 class="home-tag">All Services</h5>
+          <!-- <h5 class="home-tag">All Services</h5> -->
         </div>
       </div>
     </div>
 
-  </section>
 </div>
 
 
