--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
 
     <nav>
      <div class="nav-wrapper">
-       <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
+
+       <%= link_to '<span><i class="material-icons nav-icon large black-text">home</i>Service Works</span> '.html_safe, root_path, id: "logo", class: "brand-logo" %>
 
        <!-- for hamburger menu -->
       <a href="#" data-activates="mobile" class="button-collapse"><i class="material-icons">menu</i></a>
