--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     <div class="overlay">
       <h1 class="home-title">Need home repairs?</h1>
       <div class="row plain-div">
-        <div class="col s6 offset-s3 ">
+        <div class="col s12 m6 offset-m3 ">
           <div class="col s4 m4">
             <div class="icon block">
               <h2 class="center"><i class="material-icons medium">schedule</i></h2>
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <form class="home-form row ">
+      <form class="home-form row">
        <div class="input-field col s10 m4 offset-m4 offset-s1 center-align">
          <a class="btn signup light-green" href="users/new">Sign me up!</a>
        </div>
