--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -29,9 +29,13 @@ body {
   padding:5% 0 5% 0;
 }
 
-.nav{
+nav{
   background-color: transparent !important;
   box-shadow: none !important;
+}
+.nav-icon{
+  display: inline-block !important;
+  height: 50px;
 }
 
 .home-title {
@@ -45,6 +49,7 @@ body {
 
 .home-tag{
   text-align: center;
+  color: white;
 }
 
 .overlay {
@@ -54,7 +59,7 @@ body {
    width: 100%;
    height: 100vh;
    z-index: 10;
-   background-color: rgba(150,150,150,0.3);
+   background-color: rgba(0,0,0,0.3);
  }
 
 .white-color{
@@ -80,10 +85,13 @@ body {
   color:white;
   cursor: pointer;
 }
+.overlay i{
+  /*color: white !important;*/
+}
 
 
 .card-content p{
-  display: none;
+  /*display: none;*/
   /*opacity: 0;*/
 }
 
@@ -112,6 +120,11 @@ body {
   height: 100vh;
   margin-top: -5%;
 }
+.signup {
+  width:75%;
+  font-size: 1.5rem;
+
+}
 
 .home-form {
   /*margin: 15% 0 0 0;*/
@@ -125,6 +138,11 @@ body {
 
 /* Section 2 */
 /* Feature cards */
+.plain-div {
+  /*background-color: rgb(224,224,224);*/
+  /*height: 100px;*/
+}
+
 .card {
   display: inline;
   text-align: center;
@@ -132,6 +150,7 @@ body {
 
 hr {
   width: 35%;
+  border-color: #8bc34a;
 }
 
 /* Section 4  */
@@ -198,4 +217,27 @@ span.badge{
 
 .even {
   background-color: #efefef;
+}
+
+/*media queries*/
+@media screen and (max-width: 480px) {
+    /*body {
+        background-color: lightgreen;
+    }*/
+    #homedoor {
+      height: 100vh;
+      margin-top: -20%;
+    }
+
+    a#logo {
+      font-size: 2rem;
+    }
+    .home-title {
+      margin:30% 0 0 0;
+      font-size:2.5rem;
+    }
+    .plain-div {
+      margin-top:20%;
+      margin-bottom:20%;
+    }
 }
