--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,11 @@
    <!-- overlay  -->
     <div class="overlay">
       <h1 class="home-title">Need home repairs?</h1>
+      <form class="home-form row">
+       <div class="input-field col s10 m4 offset-m4 offset-s1 center-align">
+         <a class="btn signup light-green" href="users/new">Sign up!</a>
+       </div>
+      </form>
       <div class="row plain-div">
         <div class="col s12 m6 offset-m3 ">
           <div class="col s4 m4">
@@ -31,11 +36,7 @@
         </div>
       </div>
 
-      <form class="home-form row">
-       <div class="input-field col s10 m4 offset-m4 offset-s1 center-align">
-         <a class="btn signup light-green" href="users/new">Sign me up!</a>
-       </div>
-      </form>
+
     </div>
 </div>
     <!-- Section 2 - Getting Started Section -->
