--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -219,14 +219,14 @@ span.badge{
   background-color: #efefef;
 }
 
-/*media queries*/
+/*media queries iphone 6 and bigger*/
 @media screen and (max-width: 480px) {
     /*body {
         background-color: lightgreen;
     }*/
     #homedoor {
       height: 100vh;
-      margin-top: -20%;
+      margin-top: -15%;
     }
 
     a#logo {
@@ -235,9 +235,59 @@ span.badge{
     .home-title {
       margin:30% 0 0 0;
       font-size:2.5rem;
+      font-weight: bold;
+
+    }
+    .home-form {
+      margin-top:10%;
     }
     .plain-div {
-      margin-top:20%;
+      margin-top:30%;
       margin-bottom:20%;
     }
+    .plain-div i{
+
+      color: white !important;
+    }
+}
+/*iphone 5 and smaller*/
+@media screen and (max-width:324px){
+  #homedoor {
+    height: 100vh;
+    margin-top: -17.5%;
+  }
+  .home-form {
+    margin-top:10%;
+  }
+  .plain-div {
+    margin-top:20%;
+    margin-bottom:20%;
+  }
+}
+/*tablets*/
+@media screen and (min-width:767px) and (max-width:800px){
+  #homedoor {
+    height: 100vh;
+    margin-top: -8.5%;
+  }
+  .home-title {
+    margin:50% 0 0 0;
+    font-weight: bold;
+  
+  }
+  .overlay{
+    background-color: rgba(0,0,0,0.5);
+  }
+  .home-form {
+    margin-top:10%;
+  }
+  .plain-div {
+    margin-top:20%;
+    margin-bottom:20%;
+  }
+  .plain-div i{
+
+    color: white !important;
+  }
+
 }
