--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -126,7 +126,7 @@
 
      <!-- Main Paragraph -->
      <div class="row content overlay white-color" id="main-paragraph">
-       <div class="col s8 offset-s2 z-depth-1 white">
+       <div class="col s12 m8 offset-m2 z-depth-1 white">
          <p class="center-align">Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p>
        </div>
      </div>
