--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -20,7 +20,6 @@ body {
 
 #main-paragraph p {
     font-size: 18px;
-    color: grey;
     line-height: 2rem;
     font-family: 'Signika', sans-serif;
 }
@@ -28,9 +27,13 @@ body {
 #about{
   padding:5% 0 5% 0;
 }
+/*footer divider*/
+#divider{
+ border-right: 1px solid black;
+}
 
 nav{
-  background-color: rgba(139, 195, 74, 0.67) !important;
+  background-color: rgba(139, 195, 74, 0.69) !important;
   box-shadow: none !important;
 }
 .nav-icon{
@@ -59,7 +62,7 @@ nav{
    width: 100%;
    height: 100vh;
    z-index: 10;
-   background-color: rgba(0,0,0,0.3);
+   background-color: rgba(0,0,0,0.4);
  }
 
 .white-color{
@@ -109,11 +112,15 @@ nav{
 }
 
 #section-two {
+  height:300px;
   /*background-color: rgb(230,146,75);*/
 }
 
 .content{
-  padding-top:10%;
+  padding-top:7.3%;
+}
+.content .overlay{
+  background-color: rgba(0,0,0,0.5);
 }
 
 #homedoor {
@@ -249,7 +256,22 @@ span.badge{
       color: white !important;
     }
     .content {
-      padding-top: 35%;
+      padding-top: 15%;
+    }
+    #section-two {
+      height:300px;
+    }
+
+    footer h5{
+      font-size: 1.5rem;
+    }
+    #footer-logo{
+      margin-top: 5%;
+      text-align: center !important;
+    }
+    /*footer divider*/
+    #divider{
+     border-right: none;
     }
 }
 /*iphone 5 and smaller*/
@@ -301,6 +323,10 @@ span.badge{
 
   #about span{
     font-size:1.5rem;
+  }
+
+  #section-two {
+    height:300px;
   }
 
 }
