--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,19 @@
 <footer class="page-footer #8bc34a light-green">
-
+    <div class="container">
     <div class="row">
-      <div class="col s8 offset-s2">
-        <div class="col s6">
-          <h5 class="white-text">Get Started Now!</h5>
-            <ol class="grey-text text-lighten-4">1 - Request a Quote</ol>
-            <ol class="grey-text text-lighten-4">2 - Receive Estimates</ol>
-            <ol class="grey-text text-lighten-4">3 - Choose an Expert</ol>
-            <%= link_to 'Click here to begin!', services_path, class:"grey-text text-lighten-4" %>
+      <div class="col s12 white-text">
+        <div class="col m4 s6">
+          <h5 class="white-text">Get Started</h5>
+          <ol>
+            <li class="grey-text text-lighten-4">Request a Quote</li>
+            <li class="grey-text text-lighten-4">Receive Estimates</li>
+            <li class="grey-text text-lighten-4">Choose an Expert</li>
+          </ol>
 
+            <%= link_to 'Click here to begin!', services_path, class:"grey-text text-lighten-4" %>
         </div>
-        <div class="col s6 ">
-          <h5 class="white-text">Service Works</h5>
+        <div class="col m4 s6" id="divider">
+          <h5 class="white-text">Site Map</h5>
           <ul>
             <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
             <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li>
@@ -20,12 +22,19 @@
             <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>
           </ul>
         </div>
+        <div class="col m4 s12 right-align" id="footer-logo">
+          <h5><i class="material-icons">home</i> Service Works</h5>
+          <p>
+          Made with &hearts; in sunny South Florida.
+          </p>
+        </div>
       </div>
     </div>
+  </div>
 
     <div class="footer-copyright">
       <div class="container">
-        &copy; 2015 by Wyncode. Made with love in South Florida.
+        &copy; 2015 by Wyncode.
       </div>
     </div>
 </footer>
